--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DEBUG=True
 SECRET_KEY=your-secret-key-here
 
-DB_NAME=crm_db
+DB_NAME=job-crm_db
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
