--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY=your-secret-key-here
 
 DB_NAME=job-crm_db
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=gulomjon2003
 DB_HOST=localhost
 DB_PORT=5432
 
